# Miivvy

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  API_SHORTCUTS.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  main.py  pyproject.toml  storage.rules
backend/firebase/: __init__.py  config.py  firestore_helper.py
backend/middleware/: auth_middleware.py
backend/routes/: analyze.py  auth.py  logs.py  shortcuts.py  webhook.py
backend/tests/api/: README.md  test_shortcuts.py  test_shortcuts_curl.sh
frontend/: .gitignore  FLUTTER_SETUP.md  README.md  pubspec.yaml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: monitored_app.dart
frontend/lib/services/: preferences_service.dart  shortcut_service.dart
frontend/lib/ui/: add_app_screen.dart  automation_guide_screen.dart  dashboard_screen.dart  settings_screen.dart  shortcut_guide_screen.dart  shortcut_setup_screen.dart  splash_screen.dart
